--- a/index.html
+++ b/index.html
@@ -84,12 +84,35 @@
 
     <hr>
 
-    <h2>header</h2>
+    <h2>@header</h2>
 
     <header>
         <img src="./images/hero.svg" alt="">
         <h1>Heading inside hero</h1>
     </header>
+
+    <hr>
+
+    <h2>@Section</h2>
+    
+    <section>
+    <h3>White Section</h3>
+    <p>This will have white background</p>
+    </section>
+
+    <section>
+        <h3>off white Section</h3>
+        <p>This will have grey background</p>
+    </section>
+
+    <footer>
+        <div>Some small heading inside footer</div>
+        <ul>
+            <li>Socialone</li>
+            <li>Socialtwo</li>
+            <li>Socialthree</li>
+        </ul>
+    </footer>
 
     <div style="height: 30vh;">
     
