--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
         <p>This will have grey background</p>
     </section>
 
+    <hr>
+
+    <h2>@Footer</h2>
+
     <footer>
         <div>Some small heading inside footer</div>
         <ul>
@@ -114,9 +118,7 @@
         </ul>
     </footer>
 
-    <div style="height: 30vh;">
-    
-    </div>
+    <!-- <div style="height: 30vh;"> </div> -->
 
 </body>
 </html>
