--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <h3>Fluid Container</h3>
     <div class="container-fluid">This is a fluid container and it will go til the end of the page</h3></div>
     <h3>Centered Container</h3>
-    <div class="container">This is a centered container and it will go till the specified width of the page</div>
+    <div class="container container-center">This is a centered container and it will go till the specified width of the page</div>
 
     <hr>
 
