--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
     <h2>@Links</h2>
 
-    <a href="https://google.com">Primary Link</a>
-    <a href="/">Secondary Link</a>
+    <a class="link link-primary" href="https://google.com">Primary Link</a>
+    <a class="link link-secondary" href="/">Secondary Link</a>
 
     <hr>
 
