--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
     <h2>@Lists</h2>
 
     <h3>Unordered list</h3>
+    <p>This list wil not have bullets</p>
 
-    <ul>
+    <ul class="list-non-bullet">
         <li>Item One</li>
         <li>Item Two</li>
         <li>Item Three</li>
@@ -50,15 +51,15 @@
 
     <h3> Unordered inline list</h3>
 
-    <ul>
-        <li>Inline Item One</li>
-        <li>Inline Item Two</li>
-        <li>Inline Item Three</li>
+    <ul class="list-non-bullet">
+        <li class="list-item-inline">Inline Item One</li>
+        <li class="list-item-inline">Inline Item Two</li>
+        <li class="list-item-inline">Inline Item Three</li>
     </ul>
 
     <h3> Reverse Ordered List</h3>
 
-    <ol>
+    <ol reversed>
         <li>Vadapav</li>
         <li>Samosa</li>
         <li>Bhel</li>
