--- a/index.html
+++ b/index.html
@@ -69,17 +69,17 @@
 
     <h2>@Nav</h2>
 
-    <nav>
-        <div>IAMDEVLOPER</div>
-        <ul>
-            <li>
-                <a href="/">Home</a>
+    <nav class="navigation container">
+        <div class="nav-brand">IAMDEVLOPER</div>
+        <ul class="list-non-bullet nav-pills">
+            <li class="list-item-inline">
+                <a class="link link-active" href="/">Home</a>
             </li>
-            <li>
-                <a href="/">Product</a>
+            <li class="list-item-inline">
+                <a class="link" href="/">Product</a>
             </li>
-            <li>
-                <a href="/">About</a>
+            <li class="list-item-inline">
+                <a class="link" href="/">About</a>
             </li>            
         </ul>
     </nav>
