--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
 
     <h2>@header</h2>
 
-    <header>
-        <img src="./images/hero.svg" alt="">
-        <h1>Heading inside hero</h1>
+    <header class="hero">
+        <img class="hero-img" src="./images/hero.svg" alt="">
+        <h1 class="hero-heading">Pratik Kanthe The <span class="heading-inverted">Web Devloper</span> </h1>
     </header>
 
     <hr>
