--- a/index.html
+++ b/index.html
@@ -96,15 +96,19 @@
     <hr>
 
     <h2>@Section</h2>
-    
-    <section>
+    <section class="section">
+
+    <div class="container container-center">
     <h3>White Section</h3>
-    <p>This will have white background</p>
+    <p>This will have white background Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus velit eum et, accusamus iure officiis necessitatibus laudantium itaque commodi ea molestiae unde maxime asperiores.</p>
+    </div>
     </section>
 
-    <section>
+    <section class="section ow">
+        <div class="container container-center">
         <h3>off white Section</h3>
-        <p>This will have grey background</p>
+        <p>This will have grey background Lorem ipsum dolor sit amet consectetur, adipisicing elit. In unde ipsa id quaerat distinctio veniam tenetur corporis, architecto, fuga maxime minima animi esse officiis.</p>
+        </div>
     </section>
 
     <hr>
