--- a/index.html
+++ b/index.html
@@ -4,127 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Component Liabrary</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
 <body>
-    <h1>Pratik Kanthe's Component Liabrary</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore ullam accusamus reiciendis! Non quos reiciendis laboriosam est sapiente voluptate ipsa quod, placeat pariatur ut.</p>
-
-    <hr >
-
-    <h2>@Typography</h2>
-
-    <h1>This is the biggest heading</h1>
-    <h2>this is the second biggest</h2>
-    <p>This is the normal text. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, eum!</p>
-    <small>This is relatively smaller text</small>
-
-    <hr>
-
-    <h2>@Container</h2>
-
-    <h3>Fluid Container</h3>
-    <div class="container-fluid">This is a fluid container and it will go til the end of the page</h3></div>
-    <h3>Centered Container</h3>
-    <div class="container container-center">This is a centered container and it will go till the specified width of the page</div>
-
-    <hr>
-
-    <h2>@Links</h2>
-
-    <a class="link link-primary" href="https://google.com">Primary Link</a>
-    <a class="link link-secondary" href="/">Secondary Link</a>
-
-    <hr>
-
-    <h2>@Lists</h2>
-
-    <h3>Unordered list</h3>
-    <p>This list wil not have bullets</p>
-
-    <ul class="list-non-bullet">
-        <li>Item One</li>
-        <li>Item Two</li>
-        <li>Item Three</li>
-    </ul>
-
-    <h3> Unordered inline list</h3>
-
-    <ul class="list-non-bullet">
-        <li class="list-item-inline">Inline Item One</li>
-        <li class="list-item-inline">Inline Item Two</li>
-        <li class="list-item-inline">Inline Item Three</li>
-    </ul>
-
-    <h3> Reverse Ordered List</h3>
-
-    <ol reversed>
-        <li>Vadapav</li>
-        <li>Samosa</li>
-        <li>Bhel</li>
-    </ol>
-
-    <hr>
-
-    <h2>@Nav</h2>
-
-    <nav class="navigation container">
-        <div class="nav-brand">IAMDEVLOPER</div>
-        <ul class="list-non-bullet nav-pills">
-            <li class="list-item-inline">
-                <a class="link link-active" href="/">Home</a>
-            </li>
-            <li class="list-item-inline">
-                <a class="link" href="/">Product</a>
-            </li>
-            <li class="list-item-inline">
-                <a class="link" href="/">About</a>
-            </li>            
-        </ul>
-    </nav>
-
-    <hr>
-
-    <h2>@header</h2>
-
-    <header class="hero">
-        <img class="hero-img" src="./images/hero.svg" alt="">
-        <h1 class="hero-heading">Pratik Kanthe The <span class="heading-inverted">Web Devloper</span> </h1>
-    </header>
-
-    <hr>
-
-    <h2>@Section</h2>
-    <section class="section">
-
-    <div class="container container-center">
-    <h3>White Section</h3>
-    <p>This will have white background Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus velit eum et, accusamus iure officiis necessitatibus laudantium itaque commodi ea molestiae unde maxime asperiores.</p>
-    </div>
-    </section>
-
-    <section class="section ow">
-        <div class="container container-center">
-        <h3>off white Section</h3>
-        <p>This will have grey background Lorem ipsum dolor sit amet consectetur, adipisicing elit. In unde ipsa id quaerat distinctio veniam tenetur corporis, architecto, fuga maxime minima animi esse officiis.</p>
-        </div>
-    </section>
-
-    <hr>
-
-    <h2>@Footer</h2>
-
-    <footer class="footer">
-        <div class="footer-header">Some small heading inside footer</div>
-        <ul class="social-links list-non-bullet">
-            <li class="list-item-inline"><a class="link" href="/">Socialone</a></li>
-            <li class="list-item-inline"><a class="link" href="/">Socialtwo</a></li>
-            <li class="list-item-inline"><a class="link" href="/">Socialthree</a></li>
-        </ul>
-    </footer>
-
-    <!-- <div style="height: 30vh;"> </div> -->
-
+    
 </body>
 </html>
