--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home | Adarshbalak</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <h1>Adarsh Balak</h1>
+    <nav class="navigation container">
+        <div class="nav-brand">IAMDEVLOPER</div>
+        <ul class="list-non-bullet nav-pills">
+            <li class="list-item-inline">
+                <a class="link link-active" href="/">Home</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/">Projects</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/">Blog</a>
+            </li>            
+        </ul>
+    </nav>
 </body>
 </html>
