--- a/index.html
+++ b/index.html
@@ -15,12 +15,57 @@
                 <a class="link link-active" href="/">Home</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/">Projects</a>
+                <a class="link" href="/projects.html">Projects</a>
             </li>
             <li class="list-item-inline">
                 <a class="link" href="/">Blog</a>
             </li>            
         </ul>
     </nav>
+
+    <header class="hero">
+        <img class="hero-img" src="./images/hero.svg" alt="">
+        <h1 class="hero-heading">Pratik Kanthe The <span class="heading-inverted">Web Devloper</span> </h1>
+        <!-- <p class="hero-heading"> I am learning how to program and make web applications with <span class="heading-inverted">NEOGCAMP</span><br><br>
+        
+        You can connect with me on <span class="heading-inverted">Instagram</span>
+        </p> -->
+    </header>
+
+    <section class="section ow">
+        <div class="container container-center">
+        <h1>Technologies</h1>
+        <p>I'm familiar with HTML5, CSS, JavaScript, NodeJS, ReactJS, and Web Hosting</p>
+        </div>
+    </section>
+
+    <section class="section">
+        <div class="container container-center">
+        <h1>Projects</h1>
+        <p>I like to showcase my work and thus, you can see my project hosted online</p>
+
+        <a class="link link-primary" href="https://google.com">See Projects</a>
+
+    </section>
+
+    <section class="section ow">
+        <div class="container container-center">
+        <h1>Blogs</h1>
+        <p>I'm also working on some technical and non technical blogs I like to document my journey of learning</p>
+        <a class="link link-secondary" href="/">Read Blogs</a>
+        </div>
+    </section>
+
+    </div>
+
+    <footer class="footer">
+        <div class="footer-header">Social media presence</div>
+        <ul class="social-links list-non-bullet">
+            <li class="list-item-inline"><a class="link" href="/">Git Hub</a></li>
+            <li class="list-item-inline"><a class="link" href="/">LinkedIn</a></li>
+            <li class="list-item-inline"><a class="link" href="/">Instagram</a></li>
+        </ul>
+    </footer>
+
 </body>
 </html>
