--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a class="link" href="/projects.html">Projects</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/">Blog</a>
+                <a class="link" href="/blogs.html">Blog</a>
             </li>            
         </ul>
     </nav>
