--- a/lib/blogs.html
+++ b/lib/blogs.html
@@ -8,6 +8,21 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
+    <nav class="navigation container">
+        <div class="nav-brand">IAMDEVLOPER</div>
+        <ul class="list-non-bullet nav-pills">
+            <li class="list-item-inline">
+                <a class="link" href="/">Home</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/lib/projects.html">Projects</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link link-active" href="/lib/blogs.html">Blog</a>
+            </li>            
+        </ul>
+    </nav>
+
     <header class="hero">
         <img class="hero-img" src="/images/wait.svg" alt="">
         <h1 class="hero-heading">Sorry for keep you waiting blogs will <span class="heading-inverted">Comming Soon...</span> </h1>
