--- a/lib/projects.html
+++ b/lib/projects.html
@@ -57,5 +57,14 @@
         </ul>
     </div>
 
+    <footer class="footer">
+        <div class="footer-header">Social media presence</div>
+        <ul class="social-links list-non-bullet">
+            <li class="list-item-inline"><a class="link" href="/">Git Hub</a></li>
+            <li class="list-item-inline"><a class="link" href="/">LinkedIn</a></li>
+            <li class="list-item-inline"><a class="link" href="/">Instagram</a></li>
+        </ul>
+    </footer>
+
 </body>
 </html>
