--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
         </div>
     </section>
 
-    <section class="section">
+    <section class="section ow">
         <div class="container container-center">
         <h1>Projects</h1>
         <p>I like to showcase my work and thus, you can see my project hosted online</p>
 
-        <a class="link link-primary" href="https://google.com">See Projects</a>
+        <a class="link link-primary" href="/lib/projects.html">See Projects</a>
 
     </section>
 
@@ -52,7 +52,7 @@
         <div class="container container-center">
         <h1>Blogs</h1>
         <p>I'm also working on some technical and non technical blogs I like to document my journey of learning</p>
-        <a class="link link-secondary" href="/">Read Blogs</a>
+        <a class="link link-secondary" href="/lib/blogs.html">Read Blogs</a>
         </div>
     </section>
 
