--- a/lib/blogs.html
+++ b/lib/blogs.html
@@ -27,5 +27,17 @@
         <img class="hero-img" src="/images/wait.svg" alt="">
         <h1 class="hero-heading">Sorry for keep you waiting blogs will <span class="heading-inverted">Comming Soon...</span> </h1>
     </header>
+
+    <section class="section ow">
+        <div class="container container-center">
+            <h1>Dummy blog one</h1>
+        <small>November, 2020</small>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore rem laboriosam vitae illum ut totam iure sequi incidunt dolore odio, vel atque dolorum accusamus assumenda facilis rerum inventore ea quas ab vero est ratione.</p>
+
+        <a class="link link-primary" href="#">Read more</a>
+        </div>
+        
+    </section>
+
 </body>
 </html>
