--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <p>I like to showcase my work and thus, you can see my project hosted online</p>
 
         <a class="link link-primary" href="/lib/projects.html">See Projects</a>
-
+        </div>
     </section>
 
     <section class="section ow">
