--- a/lib/blogs.html
+++ b/lib/blogs.html
@@ -24,7 +24,7 @@
     </nav>
 
     <header class="hero">
-        <img class="hero-img" src="/images/wait.svg" alt="">
+        <img class="hero-img" src="/images/welcome.svg" alt="">
         <h1 class="hero-heading">Welcome to the <span class="heading-inverted">Blogs</span> </h1>
     </header>
 
