space in project

--- a/lib/projects.html
+++ b/lib/projects.html
@@ -57,6 +57,10 @@
         </ul>
     </div>
 
+    <div class="space">
+        
+    </div>
+
     <footer class="footer">
         <div class="footer-header">Social media presence</div>
         <ul class="social-links list-non-bullet">
